[package]
edition = "2021"
name = "node-wry"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.24.5"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.4", default-features = false, features = ["napi8"], path = "../../rust/napi-rs/crates/napi" }
napi-derive = "2.9.3"
serde_json = "1.0.91"
wry = { version = "0.23.4", features = ["fullscreen"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
