[package]
edition = "2021"
name = "node-wry"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.70"
image = "0.24.5"
napi = { version = "2.12.0", default-features = false, features = ["napi8", "anyhow"] }
napi-derive = "2.9.3"
serde_json = "1.0.91"
wry = { version = "0.23.4", features = ["fullscreen"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
